{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 26,
  "lineage": "ab8785cb-df1b-3f7c-3151-6b1f04c61bba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035b3c7efe6d061d5",
            "arn": "arn:aws:ec2:us-east-1:977761437422:instance/i-0e0c7f1f735c56c6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0c7f1f735c56c6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kt",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a735855b4dd51dc6",
            "private_dns": "ip-10-0-1-94.ec2.internal",
            "private_ip": "10.0.1.94",
            "public_dns": "ec2-3-226-242-213.compute-1.amazonaws.com",
            "public_ip": "3.226.242.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa93a743e14db516",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014ac84e485e04327",
            "tags": {
              "Name": "Ec2-with-VPC"
            },
            "tags_all": {
              "Name": "Ec2-with-VPC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0933f704f847623c9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:internet-gateway/igw-0b61d65a22aa6af86",
            "id": "igw-0b61d65a22aa6af86",
            "owner_id": "977761437422",
            "tags": {
              "Name": "internet-gateway-demo"
            },
            "tags_all": {
              "Name": "internet-gateway-demo"
            },
            "vpc_id": "vpc-0a16400a6d23cc750"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:route-table/rtb-08db65c3808db3f51",
            "id": "rtb-08db65c3808db3f51",
            "owner_id": "977761437422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b61d65a22aa6af86",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "tags_all": {
              "Name": "public-route-table-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a16400a6d23cc750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f55bb68758f193b5",
            "route_table_id": "rtb-08db65c3808db3f51",
            "subnet_id": "subnet-014ac84e485e04327"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-public",
            "aws_subnet.public_1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:security-group/sg-0933f704f847623c9",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0933f704f847623c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "977761437422",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a16400a6d23cc750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:subnet/subnet-014ac84e485e04327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-014ac84e485e04327",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977761437422",
            "tags": {
              "Name": "public_1-demo"
            },
            "tags_all": {
              "Name": "public_1-demo"
            },
            "vpc_id": "vpc-0a16400a6d23cc750"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:vpc/vpc-0a16400a6d23cc750",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ad1d7601dfc70df",
            "default_route_table_id": "rtb-05bca44d9c255bebe",
            "default_security_group_id": "sg-0eacc16f12e644d8f",
            "dhcp_options_id": "dopt-02538986a1bd3c53a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a16400a6d23cc750",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05bca44d9c255bebe",
            "owner_id": "977761437422",
            "tags": {
              "Name": "Vpc-custom-demo"
            },
            "tags_all": {
              "Name": "Vpc-custom-demo"
            }
          }
        }
      ]
    }
  ]
}